add cicerone lib add room lib add main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PagingLibTest</string>
+    <string name="movies_by_page">Movies by page</string>
 </resources>
