--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="with_placeholders">With placeholders</string>
     <string name="database">Database</string>
     <string name="network_and_database">Network and database</string>
+    <string name="loading">Loading</string>
 </resources>
