--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="loading">Loading</string>
     <string name="loading_error">Loading error</string>
     <string name="reload">Reload</string>
+    <string name="repeat">Repeat</string>
 </resources>
